feat(employee): auto-create user account and send email with login credentials when creating employee